# mulvoc

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
dictionaries/: Basque_language.csv  Irish-phrases.csv  Swadesh_Celtic.csv  Swadesh_Finno-Ugric.csv  Swadesh_Iberian.csv  Swadesh_List.csv  Swadesh_Romance2.csv  Swadesh_Slavic.csv  Swadesh_uncommon_European.csv  anatomy.csv  animals.csv  colours.csv  food.csv  general.csv  grammatical.csv  nihongo.csv  numbers.csv  occupations.csv  putonghua.csv  test1.csv  test2.csv  times.csv
etc/: LanguageCodes.tab  grammar.csv  morphology.csv
libsrc/: mulvoc.h  mulvoc_data.c  mulvoc_out.c
lisp/: csv-writer.el  csv.el  language-codes.el  mulvoc-custom.el  mulvoc-data.el  mulvoc-flashcards.el  mulvoc-identify.el  mulvoc-interactive-edit.el  mulvoc-listing.el  mulvoc-mode.el  mulvoc-writer.el  mulvoc.el
src/: voclist.c  voclu.c  vocmerge.c  voctest.c
texinfo/: mulvoc.texinfo
